2008-12-01  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam Roben.

        Make sure to re-insert layers as needed so they won't be lost when the layer backed
        view is removed from the view hierarchy.

        * Plugins/Hosted/WebHostedNetscapePluginView.h:
        Add _pluginLayer ivar.
        
        * Plugins/Hosted/WebHostedNetscapePluginView.mm:
        (-[WebHostedNetscapePluginView createPlugin]):
        Don't add the layer here.
        
        (-[WebHostedNetscapePluginView setLayer:]):
        Instead, add it here.
        
        (-[WebHostedNetscapePluginView destroyPlugin]):
        Set _pluginLayer to 0.
        
        * Plugins/WebNetscapePluginView.mm:        
        (-[WebNetscapePluginView createPlugin]):
        Don't add the layer here.
        
        (-[WebNetscapePluginView setLayer:]):
        Do it here.

2008-11-30  Antti Koivisto  <antti@apple.com>

        Reviewed by Mark Rowe.
        
        https://bugs.webkit.org/show_bug.cgi?id=22557
        
        Report free size in central and thread caches too.

        * Misc/WebCoreStatistics.mm:
        (+[WebCoreStatistics memoryStatistics]):

2008-11-29  Antti Koivisto  <antti@apple.com>

        Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=22557
        Add statistics for JavaScript GC heap.

        * Misc/WebCoreStatistics.mm:
        (+[WebCoreStatistics javaScriptObjectsCount]):
        (+[WebCoreStatistics memoryStatistics]):

2008-11-29  Antti Koivisto  <antti@apple.com>

        Reviewed by Alexey Proskuryakov.
        
        https://bugs.webkit.org/show_bug.cgi?id=22557
        
        - Add purgeable memory statistics to cache statistics.
        - Add method for getting fastMalloc statistics.
        - Add method to force returning free memory back to system.

        * Misc/WebCache.mm:
        (+[WebCache statistics]):
        * Misc/WebCoreStatistics.h:
        * Misc/WebCoreStatistics.mm: