@@ -1,5 +1,17 @@
 2008-12-01  Anders Carlsson  <andersca@apple.com>
 
+        Rename _layer to _pluginLayer where I forgot to do so.
+        
+        * Plugins/Hosted/WebHostedNetscapePluginView.mm:
+        (-[WebHostedNetscapePluginView destroyPlugin]):
+        * Plugins/WebNetscapePluginView.h:
+        * Plugins/WebNetscapePluginView.mm:
+        (-[WebNetscapePluginView createPlugin]):
+        (-[WebNetscapePluginView setLayer:]):
+        (-[WebNetscapePluginView destroyPlugin]):
+
+2008-12-01  Anders Carlsson  <andersca@apple.com>
+
         Reviewed by Adam Roben.
 
         Make sure to re-insert layers as needed so they won't be lost when the layer backed
